2006-04-23  Neal H. Walfield  <neal@gnu.org>

	* day_render.c (gtk_day_render_expose): Don't forget to free
	UNTIL.

2006-04-23  Neal H. Walfield  <neal@gnu.org>

	* day_render.c (gtk_day_render_expose): If the event doesn't end
	during the displayed period, include text about when it does ends.

2006-04-23  Neal H. Walfield  <neal@gnu.org>

	* event-list.c (gtk_event_list_reload_events): Correctly calculate
	NEXT_RELOAD.
	
2006-04-23  Neal H. Walfield  <neal@gnu.org>

	* week_view.c (gtk_week_view_reload_events): Move code which
	calculates WEEK_VIEW->BANNER_WIDTH and WEEK_VIEW->TIME_WIDTH from
	here...
	(draw_expose_event): ... to here.  Only calculate them if
	WEEK_VIEW->HAVE_EXTENTS is FALSE.

2006-04-23  Neal H. Walfield  <neal@gnu.org>

	* event-cal.c: Include <string.h>.
	(update_cal): Make year, month and day unsigned.

2006-04-23  Neal H. Walfield  <neal@gnu.org>

	* month_view.c (WIDTH_DELTA): Don't define.
	(gtk_month_view_realize): New function.  Calculate
	MONTH_VIEW->TITLE_HEIGHT here using the average font height.
	(gtk_month_view_base_class_init): Set WIDGET_CLASS->REALIZE to
	gtk_month_view_realize.
	(calc_title_height): Remove function.
	(resize_table): Don't include WIDTH_DELTA when calculating the
	width.
	(gtk_month_view_new): Don't call calc_title_height.

2006-04-23  Neal H. Walfield  <neal@gnu.org>

	* day_render.c (gtk_day_render_base_class_init): Set
	widget_class->size_request to GTK_DAY_RENDER_SIZE_REQUEST.
	(gtk_day_render_size_request): New function, calculate
	DAY_RENDER->ROW_HEIGHT_MIN here.
	(gtk_day_render_expose): Calculate time_width here as required.
	Rearrange code so that there is no penalty.
	(gtk_day_render_update_extents): Don't calc
	DAY_RENDER->ROW_HEIGHT_MIN or DAY_RENDER->TIME_WIDTH here.  Don't
	request a window size unless the widget has already received a
	size request event.

2006-04-22  Neal H. Walfield  <neal@gnu.org>

	* gtkdatesel.c (struct _GtkDateSel): Remove fields day_width,